[package]
authors = ["nemurubaka <cijiugechu@gmail.com>"]
edition = "2021"
name    = "thumbhash-node"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "2"
napi-derive = "2"
thumbhash   = "0.1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
