[package]
authors = ["nemurubaka <cijiugechu@gmail.com>"]
edition = "2021"
name    = "thumbhash-node"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5.0" }

[target.'cfg(target_os = "windows")'.dependencies]
mimalloc = { version = "0.1.37" }

[dependencies]
napi        = "2"
napi-derive = "2"
thumbhash   = "0.1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
