[package]
authors = ["nemurubaka <cijiugechu@gmail.com>"]
edition = "2021"
name    = "thumbhash-node"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc-rust = "0.2"

[target.'cfg(all(target_os = "linux", not(all(target_env = "musl", target_arch = "aarch64"))))'.dependencies]
mimalloc-rust = { version = "0.2", features = ["local-dynamic-tls"] }

[dependencies]
napi        = "2"
napi-derive = "2"
thumbhash   = "0.1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
